--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=8080
 
 #log
 logging.level.root = info
-spring.aop.proxy-target-class=false
+# 代理切换,false: JDK动态代理,true: CGLIB代理,默认true
+# spring.aop.proxy-target-class=false
